# Autodesk-Alias-MCP

./: .gitignore  README.md
McpServePlugin_5/: Cargo.toml
McpServePlugin_5/src/: console.rs  functions.rs  functionsinfo.rs  http.rs  imageruler.rs  layered_canvas.rs  lib.rs
McpServePlugin_5/src/funcs/: camera_get_info.rs  curve_assist_display.rs  curve_cv_display.rs  curve_cv_get.rs  curve_cv_translate.rs  curve_increment_degree.rs  curve_infos_by_name.rs  curve_transform.rs  image_add_ruler.rs  layer_create.rs  math_add.rs  mod.rs  object_assign_to_layer.rs  object_create_group.rs  object_create_line.rs  object_create_point.rs  object_create_square_surface.rs  object_delete_by_name.rs  object_set_all_invisible.rs  object_set_display_mode.rs  object_translate_by_name.rs  plane_create_construction.rs  screen_arrow_assist.rs  screen_assist_display_clear.rs  screen_assist_line_across.rs  screen_assist_point.rs  screen_assist_rectangle.rs  screen_info.rs  screen_to_world_position.rs  select_objects.rs  stage_save.rs  stage_screenshot.rs  surface_cv_display.rs  surface_cv_get.rs  surface_cv_translate_.rs  surface_infos_by_name.rs  time_get_current.rs  view_plane_construction.rs  window_display_toggle.rs
layered_canvas_gdi/: Cargo.toml
layered_canvas_gdi/src/: gl_camera.rs  gl_canvas.rs  helpers.rs  layered_canvas.rs  lib.rs
openalias_rs/: Cargo.toml  build.rs
openalias_rs/src/: aicolor.rs  lib.rs
openalias_rs/src/openalias/: mod.rs
openalias_rs/src/openalias/alfunction/: alcontinuousfunction.rs  aleditor.rs  alfunction.rs  alfunctionhandle.rs  almomentaryfunction.rs  mod.rs
openalias_rs/src/openalias/animation/: alaction.rs  alaimconstraint.rs  alanimatable.rs  alcluster.rs  alclusterable.rs  alclustermember.rs  alclusternode.rs  alconstraint.rs  alikhandle.rs  alikhandlenode.rs  aljoint.rs  alkeyframe.rs  mod.rs  (+4 more)
(+141 files in other folders)
