[package]
name = "McpServePlugin_5"
version = "0.1.0"
edition = "2024"



[lib]
crate-type = ["cdylib"]   # 必须是 cdylib 才能生成 DLL

[dependencies]
base_geometry_lib = { path = "../base_geometry_lib" }  
openalias_rs = { path = "../openalias_rs" }  
layered_canvas_gdi = { path = "../layered_canvas_gdi" }  
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
once_cell = "1"
image = "0.25"

windows = { version = "0.52", features = ["Win32_System_Console", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
winapi = { version = "0.3", features = ["winuser", "processenv", "winbase", "handleapi", "wincon", "consoleapi", "wingdi"] }
crossterm = "0.27"
