[package]
name = "openalias_rs"
version = "0.1.0"
edition = "2024"
authors = ["xj"]
description = "openAlias C interface"
license = "MIT"
include = ["**/*.rs","Cargo.toml",]
#[lib]
#crate-type = ["rlib"] 
[dependencies]
enigo = "0.1.3" #按键
base_geometry_lib = { path = "../base_geometry_lib" }  

windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
